[kbss-cvut/termit-ui#713] Return number of total results with search pages.